--- a/nginx_config.conf
+++ b/nginx_config.conf
@@ -4,6 +4,9 @@ server {
   location /api/v1/addresses {
     proxy_pass http://address_service:8000/api/v1/addresses;
   }
+  location /api/v1/eco {
+    proxy_pass http://eco_service:8000/api/v1/eco;
+  }
 
 
 }
