--- a/nginx_config.conf
+++ b/nginx_config.conf
@@ -1,11 +1,22 @@
 server {
   listen 8080;
 
+  location / {
+    proxy_pass http://wordpress;
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
+  }
+
   location /api/v1/addresses {
     proxy_pass http://address_service:8000/api/v1/addresses;
   }
   location /api/v1/eco {
     proxy_pass http://eco_service:8000/api/v1/eco;
+  }
+  location /api/v1/products {
+    proxy_pass http://product_service:8000/api/v1/products;
   }
 
 
