--- a/nginx_config.conf
+++ b/nginx_config.conf
@@ -18,6 +18,11 @@ server {
   location /api/v1/products {
     proxy_pass http://product_service:8000/api/v1/products;
   }
+  location /route/v1/driving/ {
+    proxy_pass http://routing_service:8000/route/v1/driving/;
+  }
+
+  
 
 
 }
