--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,15 +34,14 @@ services:
     build:
       context: ./eco-service
       dockerfile: Dockerfile.eeio-api
-    # command: uvicorn app.main:app --reload --host 0.0.0.0 --port 8000
     volumes:
       - ./eco-service/:/app/
       - ./eco-service/data/:/data/
     ports:
-      - 8003:8000
+      - 7070:7070
     environment:
       - DATA_PREFIX=/app
-      - SERVICE_PATH=/api/v1/eeio
+
 
   eco_service:
     build:
@@ -89,10 +88,11 @@ services:
       WORDPRESS_DB_PASSWORD: wordpress
       WORDPRESS_DB_NAME: wordpress
       WORDPRESS_CONFIG_EXTRA: |
-        define('WP_SITEURL', 'http://localhost:8080');
-        define('WP_HOME', 'http://localhost:8080');
+        define('WP_SITEURL', 'https://data.artisanalfutures.org');
+        define('WP_HOME', 'https://data.artisanalfutures.org');
     volumes:
       - ./backend:/var/www/html
+  
     depends_on:
       - db
 
@@ -113,19 +113,36 @@ services:
     environment:
       - DATA_PREFIX=/app
       - SERVICE_PATH=/api/v1/routing
+  
   nginx:
     image: nginx:latest
+    restart: unless-stopped
     ports:
-      - "8080:8080"
+      - 80:80
+      - 443:443
+    # command: "/bin/sh -c 'while :; do sleep 6h & wait $${!}; nginx -s reload; done & nginx -g \"daemon off;\"'"
     volumes:
       - ./nginx_config.conf:/etc/nginx/conf.d/default.conf
       - ./backend:/var/www/html
+      # - /etc/letsencrypt:/etc/letsencrypt
+      # - /tmp/acme_challenge:/tmp/acme_challenge
+      - ./certbot/conf:/etc/letsencrypt
+      - ./certbot/www:/var/www/certbot
     depends_on:
       - address_service
       - eco_service
       - product_service
       - wordpress
       - routing_service
-
+  
+  certbot:
+    image: certbot/certbot
+    container_name: certbot
+    volumes: 
+      - ./certbot/conf:/etc/letsencrypt
+      - ./certbot/www:/var/www/certbot
+    command: certonly --webroot -w /var/www/certbot --email ${EMAIL} -d ${DOMAIN} --agree-tos
+    depends_on:
+      - nginx
 volumes:
   backend:
