--- a/nginx_config.conf
+++ b/nginx_config.conf
@@ -1,28 +1,61 @@
 server {
-  listen 8080;
+    listen 80;
+    listen [::]:80;
+    server_name data.artisanalfutures.org;
+    add_header Access-Control-Allow-Origin *;
 
-  location / {
-    proxy_pass http://wordpress;
-    proxy_set_header Host $host;
-    proxy_set_header X-Real-IP $remote_addr;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header X-Forwarded-Proto $scheme;
-  }
+        location ~ /.well-known/acme-challenge/ {
+            root /var/www/certbot;
+        }
 
-  location /api/v1/addresses {
-    proxy_pass http://address_service:8000/api/v1/addresses;
-  }
-  location /api/v1/eco {
-    proxy_pass http://eco_service:8000/api/v1/eco;
-  }
-  location /api/v1/products {
-    proxy_pass http://product_service:8000/api/v1/products;
-  }
-  location /route/v1/driving/ {
-    proxy_pass http://routing_service:8000/route/v1/driving/;
-  }
-
-  
+    location / {
+        return 301 https://$host$request_uri;
+    }   
+ }
 
 
+server {
+    listen 443 ssl;
+    listen [::]:443 ssl http2;
+    server_name data.artisanalfutures.org;
+
+    ssl_certificate /etc/letsencrypt/live/data.artisanalfutures.org/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/data.artisanalfutures.org/privkey.pem;
+
+
+
+    # include /etc/letsencrypt/options-ssl-nginx.conf;
+    # ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+
+    location / {
+      proxy_pass http://wordpress;
+      proxy_set_header Host $host;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto $scheme;
+      proxy_redirect off;
+      add_header Access-Control-Allow-Origin *; 
+    }
+
+    location /api/v1/addresses {
+      proxy_pass http://address_service:8000/api/v1/addresses;
+      add_header Access-Control-Allow-Origin *; 
+
+    }
+    location /api/v1/eco {
+      proxy_pass http://eco_service:8000/api/v1/eco;
+      add_header Access-Control-Allow-Origin *; 
+    }
+    location /api/v1/products {
+      proxy_pass http://product_service:8000/api/v1/products;
+       add_header Access-Control-Allow-Origin *; 
+    }
+    location /route/v1/driving {
+      proxy_pass http://routing_service:8000/route/v1/driving;
+       add_header Access-Control-Allow-Origin *; 
+    }
+    location /api/models {
+      proxy_pass http://eeio_service:7070/api/models;
+       add_header Access-Control-Allow-Origin *; 
+    }
 }
