--- a/nginx_config.conf
+++ b/nginx_config.conf
@@ -4,13 +4,14 @@ server {
     server_name data.artisanalfutures.org;
     add_header Access-Control-Allow-Origin *;
 
-        location ~ /.well-known/acme-challenge/ {
-            root /var/www/certbot;
-        }
+    location ~ /.well-known/acme-challenge/ {
+      root /var/www/certbot;
+    }
 
     location / {
         return 301 https://$host$request_uri;
-    }   
+    }
+
  }
 
 
@@ -18,14 +19,11 @@ server {
     listen 443 ssl;
     listen [::]:443 ssl http2;
     server_name data.artisanalfutures.org;
-
+    
     ssl_certificate /etc/letsencrypt/live/data.artisanalfutures.org/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/data.artisanalfutures.org/privkey.pem;
 
-
-
-    # include /etc/letsencrypt/options-ssl-nginx.conf;
-    # ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+    add_header Access-Control-Allow-Origin *;
 
     location / {
       proxy_pass http://wordpress;
