--- a/example.env
+++ b/example.env
@@ -15,3 +15,8 @@ CSDT_GRAPH_URI=bolt://csdt_neo4j:7687
 
 DOMAIN=data.artisanalfutures.org
 EMAIL=csdtdevelopers@umich.edu
+
+WP_DB_HOST=""
+WP_DB_NAME=""
+WP_DB_USER=""
+WP_DB_PASSWORD=""
