--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -66,7 +66,6 @@ services:
     command: uvicorn app.main:app --reload --host 0.0.0.0 --port 8000
     volumes:
       - ./product-service/:/app/
-
     env_file:
       - .env
     environment:
@@ -77,6 +76,27 @@ services:
       - eco_service
     ports:
       - 8004:8000
+
+  assessment_service:
+    build:
+      context: ./assessment-service
+      dockerfile: Dockerfile.main
+    command: uvicorn app.main:app --reload --host 0.0.0.0 --port 8000
+    volumes:
+      - ./assessment-service/:/app/
+    env_file:
+      - .env
+    environment:
+      - DATA_PREFIX=/app
+      - SERVICE_PATH=/api/v1/assessment
+      - PRODUCT_SERVICE= http://product_service:8000/api/v1/products
+      - ECO_SOCIAL_SERVICE= http://eco_service:8000/api/v1/eco
+    depends_on:
+      - csdt_neo4j
+      - eco_service
+      - product_service
+    ports:
+      - 8003:8000
 
   # TODO: Add JWT authentication keys (JWT Authentication for WP REST API plugin)
   wordpress:
@@ -118,6 +138,7 @@ services:
       - 443:443
     volumes:
       - ./nginx_config.conf:/etc/nginx/conf.d/default.conf
+      # - ./dev_nginx_config.conf:/etc/nginx/conf.d/default.conf
       - ./backend:/var/www/html
       - ./certbot/conf:/etc/letsencrypt
       - ./certbot/www:/var/www/certbot
