--- a/nginx_config.conf
+++ b/nginx_config.conf
@@ -23,7 +23,7 @@ server {
     ssl_certificate /etc/letsencrypt/live/data.artisanalfutures.org/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/data.artisanalfutures.org/privkey.pem;
 
-    add_header Access-Control-Allow-Origin *;
+    
 
     location / {
       proxy_pass http://wordpress;
@@ -61,5 +61,11 @@ server {
     location /api/models {
       proxy_pass http://eeio_service:7070/api/models;
        add_header Access-Control-Allow-Origin *; 
+    }
+
+    location /api/v1/optimization {
+      proxy_pass http://optimization_service:3000/api/v1/optimization;
+      # add_header Access-Control-Allow-Origin *;
+      add_header Access-Control-Allow-Headers "Authorization";
     }
 }
