--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -99,30 +99,30 @@ services:
       - 8003:8000
 
   # TODO: Add JWT authentication keys (JWT Authentication for WP REST API plugin)
-  wordpress:
-    image: wordpress:latest
-    restart: always
-    environment:
-      WORDPRESS_DB_HOST: ${WP_DB_HOST}
-      WORDPRESS_DB_USER: ${WP_DB_USER}
-      WORDPRESS_DB_PASSWORD: ${WP_DB_PASSWORD}
-      WORDPRESS_DB_NAME: ${WP_DB_NAME}
-      WORDPRESS_CONFIG_EXTRA: |
-        define('WP_SITEURL', 'https://${DOMAIN}');
-        define('WP_HOME', 'https://${DOMAIN}');
-    volumes:
-      - ./backend:/var/www/html
-    depends_on:
-      - db
+  # wordpress:
+  #   image: wordpress:latest
+  #   restart: always
+  #   environment:
+  #     WORDPRESS_DB_HOST: ${WP_DB_HOST}
+  #     WORDPRESS_DB_USER: ${WP_DB_USER}
+  #     WORDPRESS_DB_PASSWORD: ${WP_DB_PASSWORD}
+  #     WORDPRESS_DB_NAME: ${WP_DB_NAME}
+  #     WORDPRESS_CONFIG_EXTRA: |
+  #       define('WP_SITEURL', 'https://${DOMAIN}');
+  #       define('WP_HOME', 'https://${DOMAIN}');
+  #   volumes:
+  #     - ./backend:/var/www/html
+  #   depends_on:
+  #     - db
 
-  db:
-    image: mysql:5.7
-    restart: always
-    environment:
-      MYSQL_DATABASE: ${WP_DB_NAME}
-      MYSQL_USER: ${WP_DB_USER}
-      MYSQL_PASSWORD: ${WP_DB_PASSWORD}
-      MYSQL_RANDOM_ROOT_PASSWORD: "1"
+  # db:
+  #   image: mysql:5.7
+  #   restart: always
+  #   environment:
+  #     MYSQL_DATABASE: ${WP_DB_NAME}
+  #     MYSQL_USER: ${WP_DB_USER}
+  #     MYSQL_PASSWORD: ${WP_DB_PASSWORD}
+  #     MYSQL_RANDOM_ROOT_PASSWORD: "1"
 
   routing_service:
     build: ./routing-service
@@ -143,6 +143,11 @@ services:
     depends_on:
       - routing_service
 
+  # style_service:
+  #   build: ./style-service
+  #   ports:
+  #     - 8501:8501 
+
   nginx:
     image: nginx:latest
     restart: unless-stopped
@@ -161,7 +166,8 @@ services:
       - product_service
       - routing_service
       - optimization_service
-      - wordpress
+      # - wordpress
+      # - style_service
 
   certbot:
     image: certbot/certbot
