--- a/nginx_config.conf
+++ b/nginx_config.conf
@@ -25,15 +25,25 @@ server {
 
     
 
-    location / {
-      proxy_pass http://wordpress;
-      proxy_set_header Host $host;
-      proxy_set_header X-Real-IP $remote_addr;
-      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-      proxy_set_header X-Forwarded-Proto $scheme;
-      proxy_redirect off;
-      add_header Access-Control-Allow-Origin *; 
-    }
+     location /browser {
+       proxy_pass http://csdt_neo4j:7474/browser;
+       proxy_set_header Host $host;
+       proxy_set_header X-Real-IP $remote_addr;
+       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+       proxy_set_header X-Forwarded-Proto $scheme;
+       proxy_redirect off;
+       add_header Access-Control-Allow-Origin *; 
+     }
+    
+     location /{
+         proxy_pass http://csdt_neo4j:7474;
+         proxy_set_header Host $host;
+         proxy_set_header X-Real-IP $remote_addr;
+         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+         proxy_set_header X-Forwarded-Proto $scheme;
+         proxy_redirect off;
+         add_header Access-Control-Allow-Origin *; 
+     }
 
     location /api/v1/addresses {
       proxy_pass http://address_service:8000/api/v1/addresses;
@@ -68,4 +78,15 @@ server {
       # add_header Access-Control-Allow-Origin *;
       add_header Access-Control-Allow-Headers "Authorization";
     }
+    # location /tools/nst-demo {
+    #   proxy_pass http://style_service:8501;
+    #   # add_header Access-Control-Allow-Origin *;
+    #   # add_header Access-Control-Allow-Headers "Authorization";
+    #   proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    #   proxy_set_header Host $http_host;
+    #   proxy_redirect off;
+    #   proxy_http_version 1.1;
+    #   proxy_set_header Upgrade $http_upgrade;
+    #   proxy_set_header Connection "upgrade";
+    # }
 }
