--- a/default-nginx-config.conf
+++ b/default-nginx-config.conf
@@ -8,12 +8,14 @@ events {
 	# multi_accept on;
 }
 
-stream {
-    server {
-        listen 7687;
-        proxy_pass csdt_neo4j:7687; 
-    }
-}
+
+# stream {
+#     server {
+#         listen 7687;
+#         proxy_pass 127.0.0.1:7688; # Forward traffic to the SSL-enabled server block
+#     }
+# }
+
 
 http {
 
@@ -90,3 +92,10 @@ http {
 #		proxy      on;
 #	}
 #}
+
+# stream {
+#     server {
+#         listen 7687;
+#         proxy_pass bolt://data.artisanalfutures.org:7687; 
+#     }
+# }
