--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,19 +2,45 @@ version: "3.7"
 
 services:
   csdt_neo4j:
-    image: neo4j:3.5.3
+    # image: neo4j:3.5.3
+    image: neo4j:latest
     hostname: csdt_neo4j
     container_name: neo4j
     ports:
       - 7474:7474
       - 7687:7687
     volumes:
-      - ./neo4j/data:/data
+      - ./neo4j/data:/var/lib/neo4j/data
       - ./neo4j/logs:/logs
       - ./neo4j/import:/var/lib/neo4j/import
       - ./neo4j/plugins:/plugins
+      # - ./certbot/conf/live/data.artisanalfutures.org/fullchain.pem:/var/lib/neo4j/certificates/neo4j.cert 
+      # - ./certbot/conf/live/data.artisanalfutures.org/privkey.pem:/var/lib/neo4j/certificates/neo4j.key 
+      # - ./neo4j/conf:/var/lib/neo4j/conf
+      # - ./neo4j.conf:/var/lib/neo4j/conf/neo4j.conf
+
     environment:
       - NEO4J_AUTH=${CSDT_USER}/${CSDT_PASSWORD}
+      # - NEO4J_dbms_connector_bolt_address=0.0.0.0:7687
+      # - NEO4J_dbms_connector_http_address=0.0.0.0:7474
+      # - NEO4J_dbms.connector.bolt.enabled=true
+      # - NEO4J_dbms.connector.bolt.tls_level=OPTIONAL
+      # - NEO4J_dbms.connector.bolt.listen_address=0.0.0.0:7687
+      # - NEO4J_dbms.connector.bolt.advertised_address=bolt.artisanalfutures.org
+      # - NEO$J_dbms.connector.http.enabled=true
+      # - NEO$J_dbms.connector.http.listen_address=0.0.0.0:7474
+      # - NEO$J_dbms.connector.http.advertised_address=${DOMAIN}
+
+      # - NEO$J_dbms.ssl.policy.bolt.enabled=true
+      # - NEO$J_dbms.ssl.policy.bolt.base_directory=certificates/bolt
+      # - NEO$J_dbms.ssl.policy.bolt.private_key=private.key
+      # - NEO$J_dbms.ssl.policy.bolt.public_certificate=public.crt
+      # - NEO4J_dbms.ssl.policy.bolt.enabled=true
+      # - NEO4J_dbms.ssl.policy.bolt.base_directory=certificates/bolt
+      # - NEO4J_dbms.ssl.policy.bolt.private_key=key.pem
+      # - NEO4J_dbms.ssl.policy.bolt.public_certificate=cert.pem
+      # - NEO4J_dbms.ssl.policy.bolt.client_auth=NONE
+
     env_file:
       - .env
 
@@ -156,6 +182,7 @@ services:
       - 443:443
     volumes:
       - ./nginx_config.conf:/etc/nginx/conf.d/default.conf
+      - ./default-nginx-config.conf:/etc/nginx/nginx.conf 
       # - ./dev_nginx_config.conf:/etc/nginx/conf.d/default.conf
       - ./backend:/var/www/html
       - ./certbot/conf:/etc/letsencrypt
