--- a/nginx_config.conf
+++ b/nginx_config.conf
@@ -25,25 +25,25 @@ server {
 
     
 
-     location /browser {
-       proxy_pass http://csdt_neo4j:7474/browser;
-       proxy_set_header Host $host;
-       proxy_set_header X-Real-IP $remote_addr;
-       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-       proxy_set_header X-Forwarded-Proto $scheme;
-       proxy_redirect off;
-       add_header Access-Control-Allow-Origin *; 
-     }
+    #  location /browser {
+    #    proxy_pass http://csdt_neo4j:7474/browser;
+    #    proxy_set_header Host $host;
+    #    proxy_set_header X-Real-IP $remote_addr;
+    #    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    #    proxy_set_header X-Forwarded-Proto $scheme;
+    #    proxy_redirect off;
+    #    add_header Access-Control-Allow-Origin *; 
+    #  }
     
-     location /{
-         proxy_pass http://csdt_neo4j:7474;
-         proxy_set_header Host $host;
-         proxy_set_header X-Real-IP $remote_addr;
-         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-         proxy_set_header X-Forwarded-Proto $scheme;
-         proxy_redirect off;
-         add_header Access-Control-Allow-Origin *; 
-     }
+    #  location /{
+    #      proxy_pass http://csdt_neo4j:7474;
+    #      proxy_set_header Host $host;
+    #      proxy_set_header X-Real-IP $remote_addr;
+    #      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    #      proxy_set_header X-Forwarded-Proto $scheme;
+    #      proxy_redirect off;
+    #      add_header Access-Control-Allow-Origin *; 
+    #  }
 
     location /api/v1/addresses {
       proxy_pass http://address_service:8000/api/v1/addresses;
@@ -90,3 +90,19 @@ server {
     #   proxy_set_header Connection "upgrade";
     # }
 }
+
+
+# server {
+#     listen 7688 ssl;
+#     server_name bolt.data.artisanalfutures.org;
+
+#     ssl_certificate /etc/letsencrypt/live/data.artisanalfutures.org/fullchain.pem;
+#     ssl_certificate_key /etc/letsencrypt/live/data.artisanalfutures.org/privkey.pem;
+
+#     location / {
+#         proxy_pass http://csdt_neo4j:7687;
+#         proxy_http_version 1.1;
+#         proxy_set_header Upgrade $http_upgrade;
+#         proxy_set_header Connection "upgrade";
+#     }
+# }
